# lms

./: .env  .env.example  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  events.py  openapi.py  server.py
app/internal/pkg/access_token/: __init__.py  exceptions.py
app/internal/pkg/connectors/: __init__.py  iopostgres.py
app/internal/pkg/handlers/: password.py
app/internal/repository/: __init__.py  exceptions.py
app/internal/repository/postgres/: __init__.py  access_token_repo.py  connection.py  course_repository.py  lecture_repository.py  lecturers.py  refresh_token_repo.py  (+1 more)
app/internal/routes/: __init__.py  auth.py  course.py  lecture.py  lecturers.py  users.py
app/internal/services/: __init__.py  auth_service.py  course_service.py  lecture_service.py  lecturer_service.py  user_service.py
app/pkg/: cryptography.py
app/pkg/cache/: __init__.py  cache.py  sqlalchemy_serializer.py
app/pkg/models/: __init__.py  courses.py  exceptions.py  lecturers.py  lectures.py  routes.py  token.py  users.py
app/pkg/settings/: __init__.py  settings.py
docker/api/: Dockerfile
docker/migrations/: Dockerfile
migrations/: 20221022_01_7iV19-create-users.py  20221022_02_kbMZn-create-table-courses.py  20221022_03_hNZYu-create-table-lectures.py  20221022_04_FbaxK-create-table-users-courses.py  20221023_01_iQStB-create-table-access-token-session.py  20221023_02_YCvec-create-table-refresh-token-session.py  20221025_01_X4qvf-add-table-lecturers.py  20221025_02_ieace-add-table-courses-lecturers.py
scripts/: migrate.py
(+10 files in other folders)
