[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["JoreKut <belovdaniil.02@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
yoyo-migrations = "^7.3.2"
dependency-injector = "^4.40.0"
bson = "^0.5.10"
psycopg2 = "^2.9.3"
bcrypt = "^3.2.2"
aiohttp = "^3.8.1"
aiomysql = "^0.1.1"
future = "^0.18.2"
uuid = "^1.30"
simplejson = "^3.17.6"
requests = "^2.28.1"
PyJWT = "^2.4.0"
python-jose = "^3.3.0"
aiocache = "^0.11.1"
aiopg = "^1.3.5"
aiosqlite = "^0.17.0"
httpx = "^0.23.0"
pyotp = "^2.7.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
